src/test/deca/syntax/invalid/resultats/test27_ifelse-lex.res
'{': [@0,301:301='{',<36>,14:0]
IDENT: [@1,304:306='int',<26>,15:1]
IDENT: [@2,308:308='i',<26>,15:5]
';': [@3,309:309=';',<39>,15:6]
'if': [@4,312:313='if',<11>,16:1]
'(': [@5,314:314='(',<34>,16:3]
'false': [@6,315:319='false',<10>,16:4]
')': [@7,320:320=')',<35>,16:9]
'{': [@8,321:321='{',<36>,16:10]
IDENT: [@9,325:325='i',<26>,17:2]
'=': [@10,327:327='=',<29>,17:4]
INT: [@11,329:329='1',<1>,17:6]
';': [@12,330:330=';',<39>,17:7]
'}': [@13,333:333='}',<37>,18:1]
'else': [@14,335:338='else',<9>,18:3]
'{': [@15,340:340='{',<36>,18:8]
IDENT: [@16,344:344='i',<26>,19:2]
'=': [@17,346:346='=',<29>,19:4]
INT: [@18,348:348='2',<1>,19:6]
';': [@19,349:349=';',<39>,19:7]
'}': [@20,352:352='}',<37>,20:1]
'else': [@21,354:357='else',<9>,20:3]
'if': [@22,359:360='if',<11>,20:8]
'(': [@23,362:362='(',<34>,20:11]
'true': [@24,363:366='true',<24>,20:12]
')': [@25,367:367=')',<35>,20:16]
'{': [@26,369:369='{',<36>,20:18]
IDENT: [@27,373:373='i',<26>,21:2]
'=': [@28,375:375='=',<29>,21:4]
INT: [@29,377:377='3',<1>,21:6]
';': [@30,378:378=';',<39>,21:7]
'}': [@31,382:382='}',<37>,22:1]
'println': [@32,387:393='println',<18>,24:1]
'(': [@33,394:394='(',<34>,24:8]
STRING: [@34,395:401='"Hello"',<47>,24:9]
')': [@35,402:402=')',<35>,24:16]
';': [@36,403:403=';',<39>,24:17]
'}': [@37,405:405='}',<37>,25:0]
